--- a/main.html
+++ b/main.html
@@ -8,8 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<caption align ="center" >Student Details</caption>
     <script type="text/javascript" src="./script.js">
 </script>
+	<table>
+		<tr>
+			<td><th>NAME</th></td>
+			<td><th>AGE</th></td>
+			<td><th>BRANCH</th></td>
+		</tr>
+		<tr>
+			<td>Shaw</td>
+			<td>20</td>
+			<td>CSE</td>
+		</tr>
+		<tr>
+			<td>Adil</td>
+			<td>21</td>
+			<td>ECE</td>
+		</tr>
+	</table>
 
 </body>
 
