--- a/main.html
+++ b/main.html
@@ -11,11 +11,11 @@
 	<caption align ="center" >Student Details</caption>
     <script type="text/javascript" src="./script.js">
 </script>
-	<table>
+	<table border ="1" , style ="background-color:yellow">
 		<tr>
-			<td><th>NAME</th></td>
-			<td><th>AGE</th></td>
-			<td><th>BRANCH</th></td>
+			<th>NAME</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
 		</tr>
 		<tr>
 			<td>Shaw</td>
