--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<caption align ="center" >Student Details</caption>
+	<caption align ="center">Student Details</caption>
     <script type="text/javascript" src="./script.js">
 </script>
-	<table border ="1" , style ="background-color:yellow">
+	<table border ="1px" , style ="background-color:yellow" >
 		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
