--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	
-	<table border ="1px" border-style, style ="background-color:yellow" >
+	<table border ="1px" border-style = "solid" border-color = "black",  style ="background-color:yellow" >
 		<caption align ="center">Student Details</caption>
 		<tr>
 			<th>NAME</th>
