--- a/main.html
+++ b/main.html
@@ -4,6 +4,11 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		table, th, td{
+			border: 1px solid rgb(0, 0, 0);
+		}
+	</style>
 </head>
 
 <body>
@@ -12,7 +17,8 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	
-	<table border ="1px" border-style = "solid" border-color = "black",  style ="background-color:yellow" >
+	<table   style ="background-color:yellow" >
+		
 		<caption align ="center">Student Details</caption>
 		<tr>
 			<th>NAME</th>
